nit fix alignment like figma diagrams. add tiktoksans font file

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,22 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: TikTok;
+  src: url('@/public/fonts/tiktoksans-variable.ttf');
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-family: TikTok, sans-serif;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
+html, body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-family);
+}
+
+* {
+  font-family: inherit;
 }
